# ct-itmo

./: README.md
year1/c++/: c++.md
year1/c++/Homework1/: CMakeLists.txt  main.c  return_codes.h
year1/c++/Homework2/: CMakeLists.txt  main.c
year1/c++/Homework3/: CMakeLists.txt  main.cpp  phonebook.cpp  phonebook.h  quicksort.h
year1/c++/Homework4/: CMakeLists.txt  LN.cpp  LN.h  main.cpp
year1/computer-architecture/: computer-architecture.md
year1/computer-architecture/Homework1/: Ivchenkov.circ  Ivchenkov.docx
year1/computer-architecture/Homework2/: Ivchenkov.circ  Ivchenkov.docx
year1/computer-architecture/Homework3/: Ivchenkov.docx
year1/computer-architecture/Homework4/: Ivchenkov.docx
year1/computer-architecture/Homework5/: Ivchenkov.docx  main.cpp
year1/paradigms/: paradigms.md
year1/paradigms/clojure-solutions/: expression.clj  linear.clj  parser.clj
year1/paradigms/javascript-solutions/: functionalExpression.js  objectExpression.js
year1/paradigms/prolog-solutions/: expression.pl  primes.pl  tree-map.pl
year1/prog-intro/: prog-intro.md
year1/prog-intro/java-solutions/: CustomPair.java  MyScanner.java  Reverse.java  ReverseHex2.java  ReverseTranspose.java  Sum.java  SumFloat.java  WordStatCount.java  WordStatInput.java  Wspp.java  WsppSortedPosition.java
year2/java-advanced/javadoc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  (+2 more)
year3/math-statistics/: M3334 Ивченков Дмитрий.xlsx
(+413 files in other folders)
